[package]
name = "pgvectors"
version.workspace = true
edition.workspace = true

[lib]
name = "vectors"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgvectors"
path = "./src/bin/pgrx_embed.rs"

[features]
default = []
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
arrayvec.workspace = true
bincode.workspace = true
byteorder.workspace = true
chrono = "0.4.38"
half.workspace = true
libc.workspace = true
log.workspace = true
memmap2.workspace = true
paste.workspace = true
pgrx = { version = "=0.12.9", default-features = false, features = [] }
pgrx-catalog = "0.1.0"
rand.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
validator.workspace = true

base = { path = "crates/base" }
detect = { path = "crates/detect" }
embedding = { path = "crates/embedding" }
interprocess_atomic_wait = { path = "crates/interprocess-atomic-wait" }
memfd = { path = "crates/memfd" }
scopeguard = "1.2.0"
send_fd = { path = "crates/send_fd" }
service = { path = "crates/service" }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = [
    "disable_initial_exec_tls",
] }

[lints]
workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
arc-swap = "1.7.0"
arrayvec = "0.7.4"
bincode = "1.3.3"
byteorder = "1.5.0"
half = { version = "2.4.0", features = ["rand_distr", "serde"] }
libc = "0.2.153"
log = { version = "0.4.21", features = ["std"] }
memmap2 = "0.9.4"
parking_lot = "0.12.1"
paste = "1.0.14"
rand = "0.8.5"
rand_distr = "0.4.3"
rustix = { version = "0.38.31", features = ["fs", "mm", "net"] }
serde = "1"
serde_json = "1"
thiserror = "1"
toml = "0.8.10"
validator = { version = "0.18.0", features = ["derive"] }

[workspace.lints]
rust.unsafe_op_in_unsafe_fn = "deny"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"

[profile.opt]
inherits = "dev"
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
