[package]
name = "base"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck.workspace = true
half.workspace = true
libc.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true

c = { path = "../c" }
detect = { path = "../detect" }

[lints]
workspace = true
