[package]
name = "base"
version.workspace = true
edition.workspace = true

[dependencies]
half.workspace = true
libc.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
validator.workspace = true

base_macros = { path = "../base_macros" }
ccc = { path = "../ccc" }
detect = { path = "../detect" }

[lints]
workspace = true
