[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
argh = "0.1.12"
base = { path = "../base" }
env_logger = "0.11.3"
index = { path = "../index" }
log.workspace = true
num-traits.workspace = true
rand.workspace = true
service = { path = "../service" }
toml.workspace = true

[lints]
workspace = true
