[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
base = { path = "../base" }

log.workspace = true
memmap2.workspace = true
parking_lot.workspace = true
rand.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
