[package]
name = "detect_macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.79", features = ["proc-macro"] }
quote = "1.0.35"
syn = { version = "2.0.53", default-features = false, features = [
    "clone-impls",
    "full",
    "parsing",
    "printing",
    "proc-macro",
] }

[lints]
workspace = true
