[package]
name = "embedding"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
thiserror = "~1.0"
serde = "~1.0"

[lints]
workspace = true

[dev-dependencies]
httpmock = "0.7"
serde_json = "~1.0"