[package]
name = "embedding"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.11.25", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = "1"
thiserror = "1"

[lints]
workspace = true

[dev-dependencies]
httpmock = "0.7.0"
serde_json = "1"
