[package]
name = "hnsw"
version.workspace = true
edition.workspace = true

[dependencies]
num-traits.workspace = true
parking_lot.workspace = true
serde_json.workspace = true

base = { path = "../base" }
common = { path = "../common" }
graph = { path = "../graph" }
quantization = { path = "../quantization" }
stoppable_rayon = { path = "../stoppable_rayon" }
storage = { path = "../storage" }

[lints]
workspace = true
