[package]
name = "index"
version.workspace = true
edition.workspace = true

[dependencies]
arc-swap.workspace = true
bincode.workspace = true
byteorder.workspace = true
crc32fast = "1.4.0"
crossbeam = "0.8.4"
dashmap = "6.0.1"
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
validator.workspace = true

base = { path = "../base" }
common = { path = "../common" }
indexing = { path = "../indexing" }
stoppable_rayon = { path = "../stoppable_rayon" }

[lints]
workspace = true
