[package]
name = "indexing"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true

base = { path = "../base" }

# algorithms
flat = { path = "../flat" }
hnsw = { path = "../hnsw" }
inverted = { path = "../inverted" }
ivf = { path = "../ivf" }
quantization = { path = "../quantization" }
rabitq = { path = "../rabitq" }

[lints]
workspace = true
