[package]
name = "ivf"
version.workspace = true
edition.workspace = true

[dependencies]
num-traits.workspace = true
rand.workspace = true
serde_json.workspace = true

base = { path = "../base" }
common = { path = "../common" }
elkan_k_means = { path = "../elkan_k_means" }
quantization = { path = "../quantization" }
stoppable_rayon = { path = "../stoppable_rayon" }
storage = { path = "../storage" }

[lints]
workspace = true
