[package]
name = "pyvectors"
version.workspace = true
edition.workspace = true

[lib]
name = "pyvectors"
crate-type = ["cdylib"]

[dependencies]
numpy = { version = "0.21" }
pyo3 = { version = "0.21", features = ["extension-module"] }
pythonize = "0.21"
serde.workspace = true
libc.workspace = true

base = { path = "../base" }
detect = { path = "../detect" }
hnsw = { path = "../hnsw" }
rabitq = { path = "../rabitq" }
stoppable_rayon = { path = "../stoppable_rayon" }
