[package]
name = "quantization"
version.workspace = true
edition.workspace = true

[dependencies]
fastdivide = "0.4.1"

log.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

base = { path = "../base" }
common = { path = "../common" }
detect = { path = "../detect" }
k_means = { path = "../k_means" }
nalgebra = { version = "0.33.0", features = ["debug"] }
stoppable_rayon = { path = "../stoppable_rayon" }

[lints]
workspace = true
