[package]
name = "quantization"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

base = { path = "../base" }
common = { path = "../common" }
detect = { path = "../detect" }
k_means = { path = "../k_means" }
stoppable_rayon = { path = "../stoppable_rayon" }

[lints]
workspace = true
