[package]
name = "quantization"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
nalgebra = "0.33.0"
rand.workspace = true
rand_chacha = "0.3.1"
rand_distr.workspace = true
serde.workspace = true
serde_json.workspace = true

base = { path = "../base" }
common = { path = "../common" }
k_means = { path = "../k_means" }
stoppable_rayon = { path = "../stoppable_rayon" }

[lints]
workspace = true
