[package]
name = "seismic"
version.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true

base = { path = "../base" }
common = { path = "../common" }
quantization = { path = "../quantization" }
stoppable_rayon = { path = "../stoppable_rayon" }
storage = { path = "../storage" }

qwt = "0.2"

[lints]
workspace = true
