[package]
name = "send_fd"
version.workspace = true
edition.workspace = true

[dependencies]
libc.workspace = true
log.workspace = true
rustix.workspace = true

[lints]
rust.internal_features = "allow"
rust.unsafe_op_in_unsafe_fn = "forbid"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
