[package]
name = "stand_alone_test"
version.workspace = true
edition.workspace = true

[dependencies]
base = { path = "../base" }
clap = { version = "4.5.4", features = ["derive"] }
common = { path = "../common" }
hnsw = { path = "../hnsw", features = ["stand-alone-test"] }
rayon = { path = "../rayon" }
storage = { path = "../storage", features = ["stand-alone-test"] }
thiserror = "1.0.58"

[lints]
workspace = true
